[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Objects/Lantern/lantern.png" type="Texture" id=1]
[ext_resource path="res://Assets/Lighting/test-light.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/SilverTheme-menu.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Themes/SilverTheme-16px.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Objects/Lantern/Lantern.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.5, 18 )

[node name="Lantern" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 4
script = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 24, 24 )
texture = ExtResource( 2 )
texture_scale = 0.5
mode = 2

[node name="LabelContainer" type="Control" parent="."]
margin_left = -44.0
margin_top = -37.0
margin_right = 50.0
theme = ExtResource( 4 )

[node name="LabelBackground" type="ColorRect" parent="LabelContainer"]
margin_left = 16.0
margin_top = 13.0
margin_right = 76.0
margin_bottom = 25.0
color = Color( 0.262745, 0.129412, 0.172549, 1 )

[node name="Label" type="Label" parent="LabelContainer"]
margin_left = 19.0
margin_top = 11.0
margin_right = 79.0
margin_bottom = 34.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Use (e)"
align = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.5, 6 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
